--- a/src/components/navbar/Navbar.Module.css
+++ b/src/components/navbar/Navbar.Module.css
@@ -25,3 +25,13 @@
     margin-right: 100px;
 
 }
+.navlink {
+    width:70px ;
+    height: 70px;
+    margin-left: 20px;
+  
+}
+
+.navlink :hover{
+    background-color:blue;
+}
