--- a/src/pages/signin/Signin.Module.css
+++ b/src/pages/signin/Signin.Module.css
@@ -2,9 +2,10 @@
 
  .inputboxsign{
     height: 40px;
-    width:80%;
+    width:70%;
     margin-top: 20px;
     margin-left: 20px;
+padding-left: 20px;
     border :1px solid grey;
 
 }
@@ -14,6 +15,8 @@
     height: 40px;
     margin-top: 18px;
     font-size: 16px;
+    border-radius: 10px;
+
     background-color: aqua;
 }
 
